schemes/syntax.txt
syntaxProgram ::= 'PROGRAM' 'ID' ';' syntaxBlock '.'

syntaxBlock ::= syntaxConsts* syntaxVars* syntaxCompoundSt

/* Описания объявлений переменных и констант */

syntaxConsts ::= 'CONST' (syntaxConstDecl ';')+

syntaxConstDecl ::= 'ID' '=' ('INTEGER_CONST'|'REAL_CONST'|'STRING_CONST')

syntaxVars ::= 'VAR' (syntaxVarDecl ';')+

syntaxVarDecl ::= ('ID' ','*)+ ':' syntaxTypeSpec

syntaxTypeSpec ::= ('INTEGER'|'REAL')

/* Описания всего остального */

syntaxCompoundSt ::= (syntaxSt ';')*

syntaxSt ::= (syntaxCompoundSt|'ID'(syntaxAssignSt|syntaxCallSt)|syntaxWhileSt|syntaxIfSt|syntaxEmptySt|syntaxEmptySt)

syntaxCallSt ::= 'ID' '(' (syntaxExpr ','*)* ')'

syntaxAssignSt ::= syntaxVariable ':=' syntaxExpr

syntaxVariable ::= 'ID'

syntaxEmptySt ::= '$NONE$'

syntaxFactor ::= ('INTEGER_CONST'|'REAL_CONST'|'STRING_CONST'|'(' syntaxExpr ')'|'+' syntaxFactor| '-' syntaxFactor| 'NOT' syntaxFactor| syntaxCallSt| syntaxVariable)

syntaxIfSt ::= 'IF' syntaxExpr 'THEN' syntaxSt ('ELSE' syntaxSt)?

syntaxWhileSt ::= 'WHILE' syntaxExpr 'DO' syntaxExpr

syntaxTerm ::= syntaxFactor (('/'|'*'|'DIV'|'MOD'|'AND') syntaxFactor)?

syntaxExpr ::= syntaxSimpleExpr (('<'|'<='|'<>'|'='|'>'|'>=') syntaxSimpleExr)?

syntaxSimpleExpr ::= syntaxTerm (('+'|'-'|'OR') syntaxTerm)?
